--- a/templates/field-multiple-value-form-divs.html.twig
+++ b/templates/field-multiple-value-form-divs.html.twig
@@ -24,9 +24,8 @@
     {{ paragraphs_field_header }}
     <div class="draggable-items-container">
       {% for item in paragraphs_field_items %}
-        <div class="admin-paragraphs-draggable-item draggable-item" style="padding: 30px 0; border: 1px solid black;">
+        <div class="admin-paragraphs-draggable-item draggable-item">
           {{ item }}
-          div div div div
         </div>
       {% endfor %}
     </div>
