Fix dragula for nested dragging and update gulp stuff

--- a/templates/field-multiple-value-form-divs.html.twig
+++ b/templates/field-multiple-value-form-divs.html.twig
@@ -25,6 +25,7 @@
     <div class="draggable-items-container">
       {% for item in paragraphs_field_items %}
         <div class="admin-paragraphs-draggable-item draggable-item">
+          <span class="dragula-handle"></span>
           {{ item }}
         </div>
       {% endfor %}
