--- a/sass/base/_variables.scss
+++ b/sass/base/_variables.scss
@@ -1,7 +1,10 @@
 // vars
 $level-1-color: #bbb;
+$level-1-bg-color: mix($level-1-color, #fff, 10%);
 $level-2-color: #888;
+$level-2-bg-color: mix($level-2-color, #fff, 10%);
 $level-3-color: #666;
+$level-3-bg-color: mix($level-3-color, #fff, 10%);
 
 $paragraphs-topbar-bg-color: #eee;
 
