--- a/sass/partials/_paragraphs-styles.scss
+++ b/sass/partials/_paragraphs-styles.scss
@@ -111,7 +111,7 @@
 // Expandable class for the toggles added in paragraphs-improvements.js
 .paragraph--view-mode--preview.expandable {
   // Adjust max-height for the amount of the preview you want to show by default
-  max-height: 120px;
+  max-height: 100px;
   overflow: hidden;
   transition: 0.2s max-height;
   cursor: zoom-in;
@@ -148,12 +148,12 @@
 //  background: linear-gradient(to bottom,  rgba($table-bg-color-hover, 0) 0%,rgba($table-bg-color-hover, 100%));
 //}
 
-//.admin-paragraphs-draggable-item .paragraph--view-mode--preview.expandable:after {
-//  background: linear-gradient(to bottom, rgba(scale-color($level-1-color, $alpha: 90%), 0.1) 0%, rgba(scale-color($level-1-color, $alpha: 90%), 1) 100%);
-//}
-//.admin-paragraphs-draggable-item .admin-paragraphs-draggable-item .paragraph--view-mode--preview.expandable:after {
-//  background: linear-gradient(to bottom, rgba(scale-color($level-2-color, $alpha: -90%), 0.1) 0%, rgba(scale-color($level-2-color, $alpha: -90%), 0.1) 100%);
-//}
-//.admin-paragraphs-draggable-item .admin-paragraphs-draggable-item .admin-paragraphs-draggable-item .paragraph--view-mode--preview.expandable:after {
-//  background: linear-gradient(to bottom, rgba($level-3-color, 0.1) 0%, rgba($level-3-color, 0.1) 100%);
-//}
+.admin-paragraphs-draggable-item .paragraph--view-mode--preview.expandable:after {
+  background: linear-gradient(to bottom, rgba($level-1-bg-color, 0) 0%, $level-1-bg-color 100%);
+}
+.admin-paragraphs-draggable-item .admin-paragraphs-draggable-item .paragraph--view-mode--preview.expandable:after {
+  background: linear-gradient(to bottom, rgba($level-2-bg-color, 0) 0%, $level-2-bg-color 100%);
+}
+.admin-paragraphs-draggable-item .admin-paragraphs-draggable-item .admin-paragraphs-draggable-item .paragraph--view-mode--preview.expandable:after {
+  background: linear-gradient(to bottom, rgba($level-3-bg-color, 0) 0%, $level-3-bg-color 100%);
+}
